--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -6,6 +6,64 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
     <body>
-    <!--Add a registration form here -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Dealership Review</a>
+                </div>
+                <ul class="navbar-nav mr-auto" style="display: inline-block">
+                    <li >
+                        <a class="btn btn-link" href="{% url 'djangoapp:about' %}" >About Us</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:register' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+        <form action="{% url 'djangoapp:register' %}" method="post">
+            <div class="container">
+              <h1>Sign Up</h1>
+              <hr>
+              <label for="username"><b>User Name</b></label>
+              <br/>
+              <input type="text" placeholder="Enter User Name: " name="username" required>
+              <br/><br/>
+              <label for="firstname"><b>First Name</b></label>
+              <br/>
+              <input type="text" placeholder="Enter First Name: " name="firstname" required>
+              <br/><br/>
+              <label for="lastname"><b>Last Name</b></label>
+              <br/>
+              <input type="text" placeholder="Enter Last Name: " name="lastname" required>
+              <br/><br/>
+              <label for="psw"><b>Password</b></label>
+              <br/>
+              <input type="password" placeholder="Enter Password: " name="psw" required>
+              <br/><br/>
+              <div>
+                  {% csrf_token %}
+                  <button class="button" type="submit">Sign Up</button>
+              </div>
+            </div>
+          </form>
     </body>
 </html>
