--- a/server/djangoapp/templates/djangoapp/user_logout.html
+++ b/server/djangoapp/templates/djangoapp/user_logout.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <title>About Us</title>
+        <title>Logout</title>
 
     </head>
     <body>
@@ -44,9 +44,9 @@
             </div>
         </nav>
         
-        <h1 style="text-align: center;">About Us</h1>
-        <h6>
-            Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
+        <h1 style="text-align: center;">Logout</h1>
+        <h6 style="text-align: center;">
+            Thank you for using our website!
         </h6>
     </body>
 </html>
