--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -9,9 +9,65 @@
 
     <body>
 
-    <!--Add a nav bar here -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Dealership Review</a>
+                </div>
+                <ul class="navbar-nav mr-auto" style="display: inline-block">
+                    <li >
+                        <a class="btn btn-link" href="{% url 'djangoapp:about' %}" >About Us</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:register' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
 
-    <!-- Add reviews as cards -->
+        <h2>Reviews for {{ dealer }}</h2>
+        <div class="card-columns">
+            {% for review in reviews %}
+                <div class="card">
+                    {% if review.sentiment == "positive" %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png">
+                    {% elif review.sentiment == "neutral" %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png">
+                    {% else %}
+                        <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png">
+                    {% endif %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{ review.car_model }}, {{ review.car_make }}</h5>
+                        <h5 class="card-title">{{ review.car_year }}</h5>
+                        <div class="card-text"> {{ review.review }} </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        {% if user.is_authenticated %}
+            <div>
+                <a class="btn btn-primary" href="{% url 'djangoapp:add_review' dealer_id dealer %}">Add Review</a>
+            </div>
+        {% endif %}
 
     </body>
 
