--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -46,8 +46,39 @@
                 </ul>
             </div>
         </nav>
-    <!--Add a dealer table here -->
-
+        <table class="table" id="table" data-filter-control="true">
+            <thead>
+                <tr>
+                    <th data-field="id">ID</th>
+                    <th data-field="address">Address</th>
+                    <th data-field="city">City</th>
+                    <th data-field="lat">Latitude</th>
+                    <th data-field="long">Longitude</th>
+                    <th data-field="state" data-filter-control="select">State</th>
+                    <th data-field="zip">Zip Code</th>
+                    <th data-field="full_name">Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for dealer in dealerships %}
+                    <tr>
+                        <td>{{dealer.id}}</td>
+                        <td>{{dealer.address}}</td>
+                        <td>{{dealer.city}}</td>
+                        <td>{{dealer.lat}}</td>
+                        <td>{{dealer.long}}</td>
+                        <td>{{dealer.state}}</td>
+                        <td>{{dealer.zip}}</td>
+                        <td><a href="{% url 'djangoapp:dealer_details' dealer.id dealer.full_name %}">{{dealer.full_name}}</a></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <script>
+            $(function() {
+              $('#table').bootstrapTable()
+            })
+          </script>
     </body>
 
 </html>
